real lab/terraform/gcp/kubeadm/kube-master02/ingress-sample.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: default-ingress
spec:
  tls:
  - hosts:
    - ranchertest.tk
    secretName: default-tls-secret
  rules:
  - host: ranchertest.tk
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-deployment
          servicePort: 80
      - path: /hello
        backend:
          serviceName: hello-deployment
          servicePort: 80
